2024-05-16  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Use tinyverse.netlify.app for dependency badge

2024-03-12  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll micro version and date

	* src/spooky_serialize.cpp: Use R_NO_REMAP, add three Rf_ prefixes

2024-03-10  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.6.35

	* src/xxhash.h: Update to current release 0.8.2
	* src/xxhash.c: Idem
	* src/digest.c: Support added xxhash algorithms xxh3_64 and xxh3_128
	* R/digest.R: Idem
	* R/vdigest.R: Support xxh3_64 and xxh3_128 in vectorized mode
	* inst/tinytest/test_digest.R: Add tests for xxh3_64 and xxh3_128
	* man/digest.Rd: Documentation
	* man/vdigest.Rd: Idem
	* DESCRIPTION (Description): Mention xxh3_64 and xxh3_128
	* README.md: Idem

	* src/digest.c (digest): Consistently print uint64_t via PRIx

2024-01-11  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.6.34

2024-01-05  Dirk Eddelbuettel  <edd@debian.org>

	* .github/workflows/ci.yaml (jobs): Update to actions/checkout@v4

2024-01-04  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll micro version and date

	* src/digest.c (open_with_widechar_on_windows): Correct format
	specification in error() call on Windows

2023-08-23  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll micro version and date

	* DESCRIPTION: Add Michael contributors
	* README.md: Idem

2023-08-03  Michael Chirico  <chiricom@google.com>

        * tests/tinytest.R: Define `expect_length()` if needed (it is only
        available from tinytest 1.4.1 released February 2023)
        * src/digest.c: `#include <stdint.h>` for `uint32_t`

2023-06-28  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.6.33

	* src/crc32c/crc32c_config.h: Minor comment edit

2023-06-27  Sergey Fedorov  <vital.had@gmail.com>

	* src/crc32c/crc32c_config.h: Use endian macros to set endianness
